# resume_build

./: .gitignore  README.md
backend/: 0.7.0  README.md  app.py  check_python.py  gunicorn.conf.py  pyproject.toml  render.yaml  requirements.txt  start.bat  start.sh  test_backend.py
backend/generated_pdfs/: resume_1_Cisco_AI_Infrastructure_Engineer_-_C.tex  resume_1_Google_AI_Safety_Data_Scientist.tex  resume_1_Google_Software_Engineer_University_G.tex  resume_1_Tech_Corp_Software_Engineer.tex  resume_1_Test_Company_Test_Job.tex
backend/templates/: default_template.tex
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: favicon-generator.html
frontend/src/: App.tsx  index.css
frontend/src/components/: AnimatedBackground.tsx  ChatInterface.tsx  ChatMessage.tsx  FileUploadStep.tsx  ResumeIcon.tsx  URLInputStep.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/utils/: resumeGenerator.ts
