[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-builder-backend"
version = "1.0.0"
description = "Backend API for AI-powered resume builder"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Resume Builder Team"}
]
keywords = ["resume", "ai", "pdf", "generation", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Flask==3.0.0",
    "Flask-CORS==4.0.0",
    "Flask-Limiter==3.5.0",
    "google-generativeai==0.3.2",
    "PyPDF2==3.0.1",
    "pdf2image==1.16.3",
    "Pillow==10.1.0",
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "python-dotenv==1.0.0",
    "werkzeug==3.0.1",
    "gunicorn==21.2.0",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
    "nest-asyncio==1.5.8",
    "crawl4ai==0.3.0",
    "selenium==4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]

[project.scripts]
resume-builder = "app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "venv*", "*.egg-info*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
